방문상담 페이지 css 수정 마케팅관련 코드 상담쪽으로 추가

--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -14,7 +14,7 @@
         <th:block th:replace="fragment/header :: headerFragment"></th:block>
         <!-- container -->
         <div id="container">
-            <div class="fixedWidth">
+            <div class="fixedWidth" :style="[dpOpenCss ? {'min-height': dpOpenCss } : {}]">
                 <!-- lnbFragment -->
                 <th:block th:replace="fragment/lnb :: lnbFragment"></th:block>
                 <!-- content -->
