--- a/src/main/resources/templates/page/service-visit.html
+++ b/src/main/resources/templates/page/service-visit.html
@@ -5,10 +5,7 @@
 <th:block layout:fragment="css">
     <style>
         #container > .fixedWidth {
-            overflow: visible;
-        }
-        #container > .modiHeight {
-            min-height: 1200px !important;
+            min-height: 1184px !important;
         }
 
         .searchArea .txtSize2 input, .searchArea .txtSize2 select {
@@ -210,7 +207,7 @@
                             </tbody>
                         </table>
 
-                        <table class="tblDataRow mb15" v-if="selectedCs.callNo">
+                        <table class="tblDataRow mb15">
                             <colgroup>
                                 <col style="width:140px">
                                 <col style="width:*">
@@ -230,52 +227,67 @@
                             </tr>
                             <tr>
                                 <th style="background: #ebf3fd;">출고가</th>
-                                <td style="text-align: right;">{{Number(selectedCs.pnMsrp).toLocaleString()}} 원</td>
+                                <td style="text-align: right;" v-if="!selectedCs.callNo">- 원</td>
+                                <td style="text-align: right;" v-else>{{Number(selectedCs.pnMsrp).toLocaleString()}} 원</td>
                                 <th style="background: #fdebed;">출고가</th>
-                                <td style="text-align: right;">{{Number(currPolicy.pnMsrp).toLocaleString()}} 원</td>
+                                <td style="text-align: right;" v-if="currPolicy.sellYn==='Y'">{{Number(currPolicy.pnMsrp).toLocaleString()}} 원</td>
+                                <td style="color: #ff0000; text-align: center; font-size: medium;" v-else-if="currPolicy.sellYn==='N'" rowspan="5">현재 판매중지된 정책입니다.</td>
+                                <td style="text-align: right;" v-else>- 원</td>
                             </tr>
                             <tr>
                                 <th style="background: #ebf3fd;">공시지원금</th>
-                                <td style="text-align: right;">{{Number(selectedCs.oldOfclSubsd).toLocaleString()}} 원
-                                </td>
+                                <td style="text-align: right;" v-if="!selectedCs.callNo">- 원</td>
+                                <td style="text-align: right;" v-else>{{Number(selectedCs.oldOfclSubsd).toLocaleString()}} 원</td>
                                 <th style="background: #fdebed;">공시지원금</th>
-                                <td style="text-align: right;">{{Number(currPolicy.pnOfclSubsd).toLocaleString()}} 원
-                                </td>
+                                <td style="text-align: right;" v-if="currPolicy.sellYn==='Y'">{{Number(currPolicy.pnOfclSubsd).toLocaleString()}} 원</td>
+                                <td style="text-align: right;" v-else-if="!currPolicy.sellYn">- 원</td>
                             </tr>
                             <tr>
                                 <th style="background: #ebf3fd;">추가지원금(공시/선약)</th>
-                                <td style="color: #ff0000; text-align: right;">
+                                <td style="text-align: right;" v-if="!selectedCs.callNo">- 원</td>
+                                <td style="color: #ff0000; text-align: right;" v-else>
                                     {{Number(selectedCs.oldExtSubsdDv).toLocaleString()}} 원 &nbsp; / &nbsp;
                                     {{Number(selectedCs.oldExtSubsdRt).toLocaleString()}} 원
                                 </td>
                                 <th style="background: #fdebed;">추가지원금(공시/선약)</th>
-                                <td style="text-align: right;">
+                                <td style="text-align: right;" v-if="currPolicy.sellYn==='Y'">
                                     {{Number(currPolicy.pnExtSubsdDv).toLocaleString()}} 원
                                     &nbsp; / &nbsp;
                                     {{Number(currPolicy.pnExtSubsdRt).toLocaleString()}} 원
                                 </td>
+                                <td style="text-align: right;" v-else-if="!currPolicy.sellYn">- 원</td>
                             </tr>
                             <tr>
                                 <th style="background: #ebf3fd;">할부원금(공시/선약)</th>
-                                <td style="color: #ff0000; text-align: right;">{{Number(selectedCs.pnMsrp -
+                                <td style="text-align: right;" v-if="!selectedCs.callNo">- 원</td>
+                                <td style="color: #ff0000; text-align: right;" v-else>{{Number(selectedCs.pnMsrp -
                                     selectedCs.oldOfclSubsd -
                                     selectedCs.oldExtSubsdDv).toLocaleString()}} 원 &nbsp; / &nbsp;
                                     {{Number(selectedCs.pnMsrp -
                                     selectedCs.oldExtSubsdRt).toLocaleString()}} 원
                                 </td>
                                 <th style="background: #fdebed;">할부원금(공시/선약)</th>
-                                <td style="text-align: right;">{{Number(currPolicy.pnMsrp -
+                                <td style="text-align: right;" v-if="currPolicy.sellYn==='Y'">{{Number(currPolicy.pnMsrp -
                                     currPolicy.pnOfclSubsd -
                                     currPolicy.pnExtSubsdDv).toLocaleString()}} 원 &nbsp; / &nbsp;
                                     {{Number(currPolicy.pnMsrp -
                                     currPolicy.pnExtSubsdRt).toLocaleString()}} 원
                                 </td>
+                                <td style="text-align: right;" v-else-if="!currPolicy.sellYn">- 원</td>
                             </tr>
                             <tr>
                                 <th style="background: #ebf3fd;">부가서비스</th>
-                                <td style="color: #ff0000; text-align: right;">있음</td>
+                                <td style="color: #ff0000; text-align: right;" v-if="selectedCs.callNo">
+                                    <span v-if="selectedCs.oldExtServYn === 'Y'">있음</span>
+                                    <span v-else>없음</span>
+                                </td>
+                                <td style="color: #ff0000; text-align: right;" v-else>-</td>
                                 <th style="background: #fdebed;">부가서비스</th>
-                                <td style="text-align: right;">없음</td>
+                                <td style="color: #ff0000; text-align: right;" v-if="currPolicy.sellYn==='Y'">
+                                    <span v-if="currPolicy.pnExtServYn === 'Y'">있음</span>
+                                    <span v-else>없음</span>
+                                </td>
+                                <td style="text-align: right;" v-else-if="!currPolicy.sellYn">-</td>
                             </tr>
                             </tbody>
                         </table>
@@ -286,13 +298,13 @@
                 <!-- //content group2 -->
 
                 <!-- content group3 -->
-                <div class="contentBlock" v-if="selectedCs.callNo">
+                <div class="contentBlock">
                     <div class="contentTitle">
                         <div class="cTit">
                             상담결과정보
                         </div>
                         <div class="cTitRight">
-                            <div id="btn2"><a href="#" class="btnM colorSky" @click="modiVisitDt"><span>방문예정일시 변경</span></a>
+                            <div id="btn2" v-if="selectedCs.callNo"><a href="#" class="btnM colorSky" @click="modiVisitDt"><span>방문예정일시 변경</span></a>
                             </div>
                         </div>
                     </div>
@@ -308,13 +320,16 @@
                             <tbody>
                             <tr>
                                 <th>고객명</th>
-                                <td>{{selectedCs.clMbrNm}}</td>
+                                <td v-if="selectedCs.callNo">{{selectedCs.clMbrNm}}</td>
+                                <td v-else>-</td>
                                 <th>상담결과</th>
-                                <td>방문예정</td>
+                                <td v-if="selectedCs.callStCd === 'P'">방문예정</td>
+                                <td v-else>-</td>
                             </tr>
                             <tr>
                                 <th>고객연락처</th>
-                                <td>{{selectedCs.mbrPnNo}}</td>
+                                <td v-if="selectedCs.callNo">{{selectedCs.mbrPnNo}}</td>
+                                <td v-else>-</td>
                                 <th>방문예정일시<span class="icoMust"><em>필수</em></span></th>
                                 <td>
                                     <span>
@@ -350,8 +365,8 @@
                                 </th>
                             </tr>
                             <tr>
-                                <td colspan="2" style="height: 60px">{{selectedCs.dealReq}}</td>
-                                <td colspan="2" style="height: 60px">{{selectedCs.callCont}}</td>
+                                <td colspan="2" style="height: 100px">{{selectedCs.dealReq}}</td>
+                                <td colspan="2" style="height: 100px">{{selectedCs.callCont}}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -528,8 +543,8 @@
                     {code: "40", value: "40"},
                     {code: "50", value: "50"},
                 ],
-                modiHH: "",
-                modiMM: "",
+                modiHH: "all",
+                modiMM: "all",
                 searchDay: "",
                 clientNm: "",
                 bnMbr: [],
@@ -584,12 +599,12 @@
             mounted: function () {
                 this.getToday()
             },
-            computed:{
-              dpOpenCss() {
-                  if(this.selectedCs.callNo) return '1200px !important'
-                  return '687px !important'
-              }
-            },
+            // computed:{
+            //   dpOpenCss() {
+            //       if(this.selectedCs.callNo) return '1200px !important'
+            //       return '687px !important'
+            //   }
+            // },
             watch: {
                 'rsltToReg.mntCarr': {
                     handler(value) {
@@ -756,27 +771,29 @@
                     this.searchList(type)
                 },
                 selectCs(data, idx) {
-                    this.selectedCs = {}
-                    this.selectedCs = data
-                    // this.rsltToReg = data
-//
-                   // let tempObj = {}
-                    // tempObj = this.selectedCs
-                    this.rsltToReg = JSON.parse(JSON.stringify(data))
+                    if (this.selectedCs.idx != idx){
+                        this.selectedCs = {}
+                        this.selectedCs = data
+                        this.selectedCs.idx = idx
+                        this.rsltToReg = JSON.parse(JSON.stringify(data))
 
+                        let t = new Date(this.selectedCs.visitDt)
+                        let hh = "" + t.getHours()
+                        let mm = "" + t.getMinutes()
+                        if (("" + mm).length == 1) {
+                            mm = "0" + mm
+                        }
+                        this.modiHH = hh
+                        this.modiMM = mm
 
-                    this.selectedCs.idx = idx
-
-                    let t = new Date(this.selectedCs.visitDt)
-                    let hh = "" + t.getHours()
-                    let mm = "" + t.getMinutes()
-                    if (("" + mm).length == 1) {
-                        mm = "0" + mm
+                        this.getCurrPolicy()
+                    } else {
+                        this.selectedCs = {}
+                        this.rsltToReg = {}
+                        this.currPolicy = {}
+                        this.modiHH = 'all'
+                        this.modiMM = 'all'
                     }
-                    this.modiHH = hh
-                    this.modiMM = mm
-
-                    this.getCurrPolicy()
                 },
                 getTrClass(idx) {
                     if (idx === this.selectedCs.idx) return true
@@ -799,7 +816,6 @@
                 },
                 openPicker2() {
                     this.$refs.programaticOpen2.showCalendar();
-                    this.dpOpenCss()
                 },
                 rsltLayerMntRtInit() {
                     // let tempObj = {}
